# serializer version: 1
# name: test_entities[button.jar_pause_dimming-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.jar_pause_dimming',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pause dimming',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pause dimming',
    'platform': 'casper_glow',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pause',
    'unique_id': 'aa:bb:cc:dd:ee:ff_pause',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.jar_pause_dimming-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Jar Pause dimming',
    }),
    'context': <ANY>,
    'entity_id': 'button.jar_pause_dimming',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.jar_resume_dimming-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.jar_resume_dimming',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Resume dimming',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Resume dimming',
    'platform': 'casper_glow',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'resume',
    'unique_id': 'aa:bb:cc:dd:ee:ff_resume',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.jar_resume_dimming-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Jar Resume dimming',
    }),
    'context': <ANY>,
    'entity_id': 'button.jar_resume_dimming',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
